
* Fix test_msgeditor.MsgEditorTest test isolation.
  (Vincent Ladeuil, #347130)

* ``medusa`` is not used anymore as an FTP test server starting with
  python2.6. A new FTP test server based on ``pyftplib`` can be used
  instead. This new server is a soft dependency as medusa which is still
  preferred if both are available (modulo python version).
  (Vincent Ladeuil)

Internals
*********

* ``BtreeIndex._spill_mem_keys_to_disk()`` now generates disk index with
  optmizations turned off. This only has effect when processing > 100,000
  keys during something like ``bzr pack``. (John Arbash Meinel)

* ``bzr selftest`` now accepts ``--subunit`` to run in subunit output
  mode. Requires ``lp:subunit`` installed to work, but is not a hard
  dependency. (Robert Collins)

* ``BzrDir.open_branch`` now takes an optional ``ignore_fallbacks``
  parameter for controlling opening of stacked branches.
  (Andrew Bennetts, Robert Collins)
  
* ``CommitBuilder`` has a new method, ``record_iter_changes`` which works
  in terms of an iter_changes iterator rather than full tree scanning.
  (Robert Collins)

* ``DirState`` can now be passed a custom ``SHA1Provider`` object
  enabling it to store the SHA1 and stat of the canonical (post
  content filtered) form. (Ian Clatworthy)

* New ``assertLength`` method based on one Martin has squirreled away
  somewhere. (Robert Collins, Martin Pool)

* New hook ``BzrDir.pre_open`` which runs before opening ``BzrDir``
  objects, allowing better enforcement of the smart server jail when
  dealing with stacked branches. (Robert Collins, Andrew Bennetts)

* New repository method ``refresh_data`` to cause any repository to
  make visible data inserted into the repository by a smart server
  fetch operation. (Robert Collins, Andrew Bennetts)

* ``register_filter_stack_map`` now takes an optional fallback parameter,
  a callable to invoke if a preference has a value not in the map
  of filter stacks. This enhancement allows, for example,  bzr-svn to